--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Welcome to My Portfolio</h2>
             <p>Passionate Information Science Engineer | Software Developer | AI & IoT Enthusiast</p>
             <div class="hero-buttons">
-                <a href="AkashRA_Intern_NI_3rd_year .pdf" download="Akash_Resume.pdf" class="resume-button">View My
+                <a href="Akash_Resume_JP.pdf" download="Akash_Resume.pdf" class="resume-button">View My
                     Resume</a>
             </div>
         </div>
